# convenient_search

./: README.md  main.py  pyproject.toml
data/: vacancies.json
src/: hh_api.py  json_saver.py  main.py  user_interaction.py  utils.py  vacancy.py
tests/: test_json_server.py  test_utils.py  test_vacancy.py
